Tue Nov 16 11:19:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/autorunner.rb (Test::Unit::AutoRunner::options): use
	  Regexp conversion.

Tue Nov 16 01:41:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_update): pedantic check to detect
	  rb_ary_to_ary() to modify the receiver.  [ruby-dev:24861]

Mon Nov 15 18:58:05 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in: check rlim_t more portably. [ruby-core:3735]

Mon Nov 15 11:50:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-special-char-p, ruby-parse-partial): handle
	  operator symbols.  [ruby-talk:120177]

Mon Nov 15 08:58:55 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (Init_Proc): make proc as an alias to Proc.new.
	  [ruby-dev:24848]

Mon Nov 15 00:46:03 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_yield_0): lambda{}.call(1) should raise exception.
	  [ruby-talk:120253]

Mon Nov 15 00:33:40 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_clear): avoid revealing NULL pointer.
	  [ruby-dev:24766]

	* string.c (str_gsub): add paranoid check. [ruby-dev:24827]

	* string.c (str_mod_check): check frozen status as well.
	  [ruby-dev:24801]

Sun Nov 14 18:59:03 2004  Tanaka Akira  <akr@m17n.org>

	* process.c (proc_getrlimit): new function for Process.getrlimit.
	  (proc_setrlimit): new function for Process.setrlimit.
	  [ruby-dev:24834]

	* configure.in: check rlim_t and its size.  check setrlimit.

	* ruby.h (NUM2ULL): new macro.

Sun Nov 14 13:27:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (PP#object_address_group): remove odd number of 'f'
	  prefixed to negative address.

Sun Nov 14 10:48:21 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/mathn.rb (Integer::gcd2): faster implementation by
	  <erlercw@siu.edu>. [ruby-talk:120232]

Sun Nov 14 08:46:33 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/logger/test_logger.rb: Logger just expects